working buttons with damage attribute added

--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -34,6 +34,8 @@
                 <h6 class = "playerdefense">defense</h6>
                 <h6 class = "playerintellect">intellect</h6>
                 <h6 class = "itemsEquip"></h6>
+                <h6 class="yourMove">Use your Skills Below</h6>
+                <div class="testing"></div>
                 <h4 class = "playerattackstat">pending action</h4>
             </div>
             
