--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -36,6 +36,9 @@
                 <h6 class = "itemsEquip"></h6>
                 <h6 class="yourMove">Use your Skills Below</h6>
                 <div class="testing"></div>
+                <div class="movesLeft"></div>
+
+                
                 <h4 class = "playerattackstat">pending action</h4>
             </div>
             
@@ -72,6 +75,8 @@
                     <h6 class = "playerdefense">defense</h6>
                     <h6 class = "playerintellect">intellect</h6>
                     <h6 class = "itemsEquip"></h6>
+                    <div class="testing"></div>
+                    <div class="movesLeft"></div>
                     <h4 class = "playerattackstat">pending action</h4>
             </div>
             
@@ -108,6 +113,8 @@
                 <h6 class = "playerdefense">defense</h6>
                 <h6 class = "playerintellect">intellect</h6>
                 <h6 class = "itemsEquip"></h6>
+                <div class="testing"></div>
+                <div class="movesLeft"></div>
                 <h4 class = "playerattackstat">pending action</h4>
             </div>
             
